--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <br>
                     <br>
                                        
-                    <P class="theme1">Click the button multiple times to have a gif collage created.</P>
+                    <P class="theme1">Click the buttons multiple times to have a gif collage created.</P>
                     <p class="theme2">*****Scroll to see your creation.*****</P>
                     <button class="waves-effect waves-light btn-large" id="natureBtn">Waterfalls</button>
                     <button class="waves-effect waves-light btn-large" id="unicornBtn">Unicorns</button>
